Otro modulo Finalizado

--- a/src/app/admin/products/components/product-create/product-create.component.html
+++ b/src/app/admin/products/components/product-create/product-create.component.html
@@ -55,6 +55,11 @@
           </mat-form-field>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs">
+          <app-stepper formControlName="stock"></app-stepper>
+        </div>
+      </div>
     </mat-card-content>
     <mat-card-actions>
       <button [disabled]="form.invalid" mat-raised-button type="submit">Guardar</button>
